--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://flow-dev:KoQJvz4UdH0zi7U6@cluster0.rnztq.mongodb.net/flo-dev?retryWrites=true&w=majority&appName=Cluster0/roadmap-app"
+MONGODB_URI=""
 JWT_SECRET=your_jwt_secret_change_this_in_production
 PORT=5001
 NODE_ENV=development
