--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     }
   },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.js" },
+    { "source": "/api/(.*)", "destination": "/backend/api/index.js" },
     { "source": "/(.*)", "destination": "/frontend/$1" }
   ]
 }
