--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "backend/api/index.js", "use": "@vercel/node" },
-    { "src": "frontend/build/**", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/api/index.js" },
-    { "src": "/(.*)", "dest": "/frontend/build/$1" }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api" }
   ]
 }
