chore: add code quality tooling with ESLint, Husky and coding guidelines

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:strict": "eslint src --ext .ts,.tsx --max-warnings 0",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "typecheck": "tsc --noEmit",
+    "code-quality": "npm run lint && npm run typecheck",
+    "file-sizes": "find src -name '*.tsx' -o -name '*.ts' | xargs wc -l | sort -nr",
+    "pre-commit": "npm run code-quality && npm run test -- --run --watchAll=false",
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +50,21 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "git add"
     ]
   }
 }
