--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "redis": "^4.6.8",
     "serverless-http": "^3.2.0"
   },
   "scripts": {
